--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name = "keywords" content = "real estate, vivienda, terreno, tierra, ministerio de ciudad, ministerio de vivienda, ecologia, granjas urbanas, eco-cielos, colombia, bogota">
 		<meta name = "author" content = "Nicolas Gomez">
         <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-        <link rel = "stylesheet" href = "home/estilos.css">
+        <link rel = "stylesheet" href = "./home/estilos.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href = "https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel = "stylesheet"> 
         <link href = "https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel = "stylesheet"> 
