--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </nav>
         
         <div id = "VidI" class = "embed-responsive embed-responsive-16by9">
-            <iframe class = "embed-responsive-item" src = "https://www.youtube.com/watch?v=RCoPez45hDM&feature=youtu.be&ab_channel=%C3%86lekAune"></iframe>
+            <iframe class = "embed-responsive-item" src = "https://youtube.com/embed/RCoPez45hDM"></iframe>
         </div>
 
         <br><br><br>
