--- a/hack/index.html
+++ b/hack/index.html
@@ -16,7 +16,7 @@
 
     <body>
 		<div id = "Vid" class = "embed-responsive embed-responsive-16by9">
-            <iframe class = "embed-responsive-item" src = "https://www.youtube.com/watch?v=AG3DV6pJLHE&feature=youtu.be&ab_channel=%C3%86lekAune"></iframe>
+            <iframe class = "embed-responsive-item" src = "https://youtube.com/embed/AG3DV6pJLHE"></iframe>
         </div>
     </body>
 
