--- a/hack/index.html
+++ b/hack/index.html
@@ -11,13 +11,21 @@
         <link rel = "stylesheet" href = "estilox.css">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src = "https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-		<!--link rel="shortcut icon" type="image/png" href="../imgs/Logo_final_HUMPR_final.png"-->
     </head>
 
     <body>
-		<div id = "Vid" class = "embed-responsive embed-responsive-16by9">
-            <iframe class = "embed-responsive-item" src = "https://youtube.com/embed/AG3DV6pJLHE"></iframe>
-        </div>
+		<header>
+		</header>
+
+		<p id = "brk">
+			<br><br>
+		</p>
+
+
+		<div class = "responsive">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/IxfB8c419bI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+
     </body>
 
 </html>
