--- a/serv4/index.html
+++ b/serv4/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="collapse navbar-collapse" id="naB">
 					<ul id="nabtop" class="nav navbar-nav navbar-right">
-                        <li><a href="../home/index.html">HOME</a></li>
+                        <li><a href="../index.html">HOME</a></li>
                         <li class = "active"><a href = "#">SERVICIOS</a></li>
                         <li><a href = "../hack/index.html">ACERCA DE NOSOTROS</a></li>
                     </ul>
